--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,10 @@
     "mongoose": "^4.13.6"
   },
   "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
